--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>vue-element-admin</title>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
   </head>
   <body>
-    <script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <!-- 打包的文件会自动挂载 -->
+    </div>
+      <!-- 部分库使用cdn，减少打包体积，增加访问速度 -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="https://cdn.bootcss.com/element-ui/2.0.7/index.js"></script>
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
   </body>
 </html>
